--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -132,31 +132,31 @@ jobs:
               }
             }
 
-            // Build stats table (with header)
-            const statsTable = `| Metric | Link |\n|--------|------|\n| **Open Pull Requests** | [![PRs](https://img.shields.io/badge/Open%20PRs-${openPRCount}-blue?style=flat-square)](https://github.com/pulls?q=author%3AAbiji-2020+type%3Apr+state%3Aopen) |\n| **Merged Pull Requests** | [![Merged PRs](https://img.shields.io/badge/Merged%20PRs-${prsMergedCount.data.total_count}-green?style=flat-square)](https://github.com/pulls?q=author%3AAbiji-2020+type%3Apr+is%3Amerged) |\n| **Closed (Not Merged)** | [![Closed](https://img.shields.io/badge/Closed-${prsClosedNotMergedCount.data.total_count}-red?style=flat-square)](https://github.com/pulls?q=author%3AAbiji-2020+type%3Apr+is%3Aclosed+-is%3Amerged) |\n| **Total Issues Created** | [![Issues](https://img.shields.io/badge/Issues-${issuesCount}-orange?style=flat-square)](https://github.com/issues?q=author%3AAbiji-2020+type%3Aissue) |`;
+            // Build stats table (with header and centered alignment)
+            const statsTable = `| Metric | Count |\n|:---:|:---:|\n| **Open Pull Requests** | [![PRs](https://img.shields.io/badge/Open%20PRs-${openPRCount}-blue?style=flat-square)](https://github.com/pulls?q=author%3AAbiji-2020+type%3Apr+state%3Aopen) |\n| **Merged Pull Requests** | [![Merged PRs](https://img.shields.io/badge/Merged%20PRs-${prsMergedCount.data.total_count}-green?style=flat-square)](https://github.com/pulls?q=author%3AAbiji-2020+type%3Apr+is%3Amerged) |\n| **Closed (Not Merged)** | [![Closed](https://img.shields.io/badge/Closed-${prsClosedNotMergedCount.data.total_count}-red?style=flat-square)](https://github.com/pulls?q=author%3AAbiji-2020+type%3Apr+is%3Aclosed+-is%3Amerged) |\n| **Total Issues Created** | [![Issues](https://img.shields.io/badge/Issues-${issuesCount}-orange?style=flat-square)](https://github.com/issues?q=author%3AAbiji-2020+type%3Aissue) |`;
 
             // Read the README file
             let readmeContent = fs.readFileSync('README.md', 'utf8');
 
-            // Replace the stats section strictly between markers to avoid malformed comments
+            // Replace the active PRs section first (ACTIVE-PRS markers)
+            const activePRStart = '<!-- ACTIVE-PRS:START -->';
+            const activePREnd = '<!-- ACTIVE-PRS:END -->';
+            const activePRStartIdx = readmeContent.indexOf(activePRStart);
+            const activePREndIdx = readmeContent.indexOf(activePREnd);
+
+            if (activePRStartIdx !== -1 && activePREndIdx !== -1 && activePREndIdx > activePRStartIdx) {
+              const newPRSection = activePRStart + '\n' + prsList + activePREnd;
+              readmeContent = readmeContent.substring(0, activePRStartIdx) + newPRSection + readmeContent.substring(activePREndIdx + activePREnd.length);
+            }
+
+            // Replace the stats section (GITHUB-STATS markers)
             const statsMarkerStart = '<!-- GITHUB-STATS:START -->';
             const statsMarkerEnd = '<!-- GITHUB-STATS:END -->';
             const ghStartIdx = readmeContent.indexOf(statsMarkerStart);
             const ghEndIdx = readmeContent.indexOf(statsMarkerEnd);
             if (ghStartIdx !== -1 && ghEndIdx !== -1 && ghEndIdx > ghStartIdx) {
-              const before = readmeContent.substring(0, ghStartIdx + statsMarkerStart.length);
-              const after = readmeContent.substring(ghEndIdx);
-              const statsBlock = `\n<div align="center">\n\n${statsTable}\n\n</div>\n`;
-              readmeContent = before + statsBlock + after;
-            }
-
-            // Find and replace the open PRs section
-            const activePRStart = readmeContent.indexOf('<!-- ACTIVE-PRS:START -->');
-            const activePREnd = readmeContent.indexOf('<!-- ACTIVE-PRS:END -->');
-
-            if (activePRStart !== -1 && activePREnd !== -1) {
-              const newPRSection = `<!-- ACTIVE-PRS:START -->\n${prsList}<!-- ACTIVE-PRS:END -->`;
-              readmeContent = readmeContent.substring(0, activePRStart) + newPRSection + readmeContent.substring(activePREnd + 24);
+              const statsBlock = statsMarkerStart + '\n<div align="center">\n\n' + statsTable + '\n\n</div>\n' + statsMarkerEnd;
+              readmeContent = readmeContent.substring(0, ghStartIdx) + statsBlock + readmeContent.substring(ghEndIdx + statsMarkerEnd.length);
             }
 
             // Write the updated content back
